# Ryven

./: .gitignore  requirements.txt  setup.cfg
ryven/console/: NIENV.py
ryven/console/custom_src/: Flow.py  NodeInstance.py  PortInstance.py  Script.py
ryven/console/custom_src/script_variables/: VariablesHandler.py
ryven/gui/: NIENV.py  NIWENV.py  Ryven.pyw  main_window.py
ryven/gui/custom_src/: Design.py  DrawingObject.py  Flow.py  FlowCommands.py  Log.py  MainWindow.py  NodeInstance.py  NodeInstance_TitleLabel.py  PortInstance.py  Script.py
ryven/gui/custom_src/builtin_nodes/: GetVar_Node.py  GetVar_NodeInstance.py  Result_Node.py  Result_NodeInstance.py  SetVar_Node.py  SetVar_NodeInstance.py  Val_Node.py  Val_NodeInstance.py
ryven/gui/custom_src/code_gen/: CodeGenerator.py
ryven/gui/custom_src/custom_list_widgets/: ScriptsListWidget.py  ScriptsList_ScriptWidget.py  VariablesListWidget.py  VarsList_VarWidget.py
ryven/gui/custom_src/node_choice_widget/: NodeChoiceWidget.py
ryven/gui/custom_src/script_variables/: VarsManager.py
ryven/gui/custom_src/source_code_preview/: CodePreview_TextEdit.py  CodePreview_Widget.py
ryven/gui/custom_src/startup_dialog/: SelectPackages_Dialog.py  StartupDialog.py
ryven/node_manager/: CustomInputWidget.py
