[metadata]
name = ryven
version = 2.4.5
author = leon-thomm
author_email = l.thomm@mailbox.org
description = Flow-based visual scripting for Python
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/leon-thomm/Ryven
project_urls =
    Website = https://ryven.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    matplotlib
    numpy >= "1.19.3"
    opencv-python
    PySide2
    scipy
    pyowm
    qbstyles
    autopep8

[options.entry_points]
console_scripts =
    ryven = ryven.gui.Ryven:main
    ryven_gui = ryven.gui.Ryven:main
    ryveng = ryven.gui.Ryven:main
    ryven_console = ryven.console.Ryven_Console:main
    ryvenc = ryven.console.Ryven_Console:main
    ryven_nodemanager = ryven.node_manager.Ryven_NodeManager:main
    ryvenn = ryven.node_manager.Ryven_NodeManager:main
    ryven_packagetranslator = ryven.package_translator.Ryven_PackageTranslator:main
    ryvenp = ryven.package_translator.Ryven_PackageTranslator:main